# NumerosPrimos_Rust_C_Zig

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  primes_c.c  primes_c_sieve.c  primes_rust.rs  primes_rust_sieve.rs  primes_zig_sieve.zig
